# ini

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: conanfile.txt
ini/: CMakeLists.txt  conanfile.txt  ini.cpp  ini.h  main.cpp  mmap.cpp  mmap.h  test.cpp
ini/tests/: CMakeLists.txt  unit.cpp
ini/tests/data/: 1.ini
